# ice-strap

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  STRAP_LAYOUT.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  guardrails.yml  lint-ruff.yml
.github/ISSUE_TEMPLATE/: ice-strap---bootstrap---enablement-issue.md
.github/workflows/: ci-python.yml  guardrails.yml
config/: __init__.py  loader.py  resolver.py  validator.py
config/defaults/: default.yaml
config/schema/: app_schema.yaml  codemodel_schema.yaml  display_schema.yaml  feature_schema.yaml  logging_schema.yaml  parsing_schema.yaml  storage_schema.yaml  vector_schema.yaml
runtime/: ice-launch.cjs
runtime/adapters/: snowball_adapter.py
runtime/preboot/: api.py  context.py  discovery.py  discovery_v2.py  launch.py  main.py  orchestrator.py  runtime.py  system_verify.py
runtime/preboot/policy/: local.py
runtime/runtime_controller/: __main__.py  controller.py  errors.py  lifecycle.py  policy.py
runtime/system/: runtime.py
runtime/system/ai_runtime/: __init__.py  health.py  launcher.py  manager.py  models.py
src/ice_strap/: __main__.py
src/ice_strap/bootstrap/: __init__.py  errors.py  handoff.py  sequence.py
src/ice_strap/config_legacy/: exporter.py  merger.py  resolver.py
src/ice_strap/config_legacy/schema/: export_schema.yaml  ml_schema.yaml  performance_schema.yaml
src/ice_strap/preboot/: __init__.py  checks.py  context.py  discovery.py
src/ice_strap/runtime_legacy/preboot/: __init__.py  api.py  main.py  state.py  state_graph.py
src/ice_strap/runtime_legacy/runtime_controller/: __main__.py  contracts.py  security.py  topology.py
src/ice_strap/runtime_legacy/system/: runtime.py
(+1 files in other folders)
